--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <p>Welcome to pastafy.app!</p>
-    <img src="Rotini,png">
+    <img src="src/Front/Rotini.png">
     <strong>
         We are working on creating machine learning pasta recipe here!
     </strong><br />
