--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -6,7 +6,7 @@
 <body>
     <p>Welcome to pastafy.app!</p>
     <br>
-    <img src="/Rotini.png" width=200>
+    <img src="Rotini.png" width=200>
     <br>
     <strong>
         We are working on creating machine learning pasta recipe here!
