--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -4,7 +4,7 @@
     <title>pastafy.app</title>
 </head>
 <body>
-    <p>title ="Welcome to pastafy.app!"</p>
+    <p><h1>Welcome to pastafy.app!</h1></p>
     <br>
     <img src="Rotini.png" width=200>
     <br>
