--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -9,7 +9,7 @@
     <img src="Rotini.png" width=200>
     <br>
     <strong>
-        We are working on creating machine learning pasta recipe here!
+        The Pastafy team is at work to deliver the finest pasta solutions to users via the online app. We are still in development stages, our code can be found here:
     </strong><br />
     <a href="https://github.com/pastafy/pastafyapp" target="_blank">https://github.com/pastafy/pastafyapp</a>
         
