--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>pastafy.app</title>
+    <title><img src="Rotini.png" width=200> pastafy.app</title>
 </head>
 <body>
     <p><h1>Welcome to pastafy.app!</h1></p>
