--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="icon" href="Rotini.png">
+    <link rel="icon" href="/Rotini.png">
     <title>pastafy.app</title>
 </head>
 <body>
