--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>pastafy.app</title>
+    <link rel="icon" href="/Rotini.png">
 </head>
 <body>
     <p><h1>Welcome to pastafy.app!</h1></p>
