--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" href="/Rotini.png">
 </head>
 <body>
+    <center>
     <p><h1>Welcome to pastafy.app!</h1></p>
     <br>
     <img src="Rotini.png" width=200>
     <br>
+    </center>
     <strong>
         The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in development stages, our project can be found here:
     </strong><br />
