--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -10,11 +10,11 @@
     <br>
     <img src="Rotini.png" width=200>
     <br>
-    </center>
     <strong>
         The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in development stages, our project can be found here:
-    </strong><br />
+    </strong>
+    <br>
     <a href="https://github.com/pastafy/pastafyapp" target="_blank">https://github.com/pastafy/pastafyapp</a>
-        
+    </center>    
 </body>
 </html>
