--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <title>pastafy.app</title>
-    <link rel="icon" href="/Rotini.png">
+    <link rel="icon" href="/Rigatoni.png">
 </head>
 <body>
     <center>
     <p><h1>Welcome to pastafy.app!</h1></p>
     <br>
-    <img src="Rotini.png" width=200>
+    <img src="Rigatoni.png" width=200>
     <br>
     <strong>
         The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in development stages, our project can be found here:
