--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -9,6 +9,7 @@
     <p><h1>Welcome to pastafy.app!</h1></p>
     <br>
     <img src="Rigatoni.png" width=200>
+    <img src="Farfalla.png" width=200> 
     <br>
     <strong>
         The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in development stages, our project can be found here:
