--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -19,6 +19,13 @@
     <br>
     <br>
     Have you ever made a pasta sauce, but were uncertain of which pasta shape to use with it? Do you sometimes need suggestions of what ingredients to add to your pasta sauce? These are exactly the kinds of problems that we at Pastafy aim to solve...giving users pasta centric solutions using machine learning, so that they can get the most out of their Italian staple.
+    <br>
+    <br>
+    <br>
+    <form>
+        <label for="ingredient">Ingredient:</label><br>
+        <input type="text" id="ingredient" name="ingredient"><br>
+    </form>
     </center>    
 </body>
 </html>
