--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -8,7 +8,7 @@
     <center>
     <p><h1>Welcome to pastafy.app!</h1></p>
     <br>
-    <img src="Cibo.png" width=400>
+    <img src="Cibo-min.png" width=400>
     <br>
     <strong>
         The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in development stages, our project can be found here:
