--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -8,23 +8,31 @@
     <center>
     <p><h1>Welcome to pastafy.app!</h1></p>
     <br>
+    <h4> giving users pasta centric solutions using machine learning, so that they can get the most out of their Italian staple.
+    <br>
+    
+    <br>
     <img src="Cibo-min.png" width=400>
     <br>
     <strong>
-        The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in development stages, our project can be found here:
+        The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in early development stages, our project can be found here:
     </strong>
     <br>
     <a href="https://github.com/pastafy/pastafyapp" target="_blank">https://github.com/pastafy/pastafyapp</a>
     <br>
     <br>
+    <h2>What does pastafy do?</h2>
     <br>
-    Have you ever made a pasta sauce, but were uncertain of which pasta shape to use with it? Do you sometimes need suggestions of what ingredients to add to your pasta sauce? These are exactly the kinds of problems that we at Pastafy aim to solve...giving users pasta centric solutions using machine learning, so that they can get the most out of their Italian staple.
+    Have you ever made a pasta sauce, but were uncertain of which pasta shape to use with it? Do you sometimes need suggestions of what ingredients to add to your pasta sauce? These are exactly the kinds of problems that we at Pastafy aim to solve...
     <br>
+    <br>
+    Input an ingredient, or a few ingredfients seperated by commas and our pastabot model will return suggested ingredients and pasta shapes for your meal.
     <br>
     <br>
     <form>
         <label for="ingredient">Ingredient:</label><br>
         <input type="text" id="ingredient" name="ingredient"><br>
+        <button type="button">Click Me!</button>
     </form>
     </center>    
 </body>
