--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -7,8 +7,7 @@
 <body>
     <center>
     <p><h1>Welcome to pastafy.app!</h1></p>
-    <br>
-    <h4> giving users pasta centric solutions using machine learning, so that they can get the most out of their Italian staple.
+    <h4> Solving pasta problems with machine learning!
     <br>
     
     <br>
@@ -30,9 +29,9 @@
     <br>
     <br>
     <form>
-        <label for="ingredient">Ingredient:</label><br>
+        <label for="ingredient">Ingredient/s:</label><br>
         <input type="text" id="ingredient" name="ingredient"><br>
-        <button type="button">Click Me!</button>
+        <button type="button">Get Suggested Ingredients and Pasta Shapes!"</button>
     </form>
     </center>    
 </body>
