--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <center>
-    <p><h1>Welcome to pastafy.app!</h1></p>
-    <h4> Solving pasta problems with machine learning!
+    <p><h1>Pastafy</h1></p>
+    <h4> Solving fun pasta problems with machine learning!
     <br>
     
     <br>
@@ -31,7 +31,7 @@
     <form>
         <label for="ingredient">Ingredient/s:</label><br>
         <input type="text" id="ingredient" name="ingredient"><br>
-        <button type="button">Get Suggested Ingredients and Pasta Shapes!"</button>
+        <button type="button">Get Suggested Ingredients and Pasta Shapes!</button>
     </form>
     </center>    
 </body>
