--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <html>
+<body style="background-color:beige;">
 <head>
     <title>pastafy.app</title>
     <link rel="icon" href="/Rigatoni.png">
