--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <html>
 <head>
     <title>pastafy.app</title>
     <link rel="icon" href="/Rigatoni.png">
 </head>
 <body>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <body style="background-color:beige;">
     <center>
     <p><h1>Pastafy</h1></p>
