--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/Rigatoni.png">
 </head>
 <body>
+<div>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <body style="background-color:beige;">
     <center>
@@ -21,6 +22,7 @@
     <br>
     <a href="https://github.com/pastafy/pastafyapp" target="_blank">https://github.com/pastafy/pastafyapp</a>
     <br>
+    </div>
     <br>
     <h2>What does pastafy do?</h2>
     <br>
