--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <body style="background-color:thistle;">
+    <body style="background-color:lavander;">
     <center>
     <p><h1>Pastafy</h1></p>
     <h4> Solving fun pasta problems with machine learning!
