--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -29,8 +29,10 @@
     Have you ever made a pasta sauce, but were uncertain of which pasta shape to use with it? Do you sometimes need suggestions of what ingredients to add to your pasta sauce? These are exactly the kinds of problems that we at Pastafy aim to solve...
         </div>
     <br>
-    <br>
+    <br>'
+        <div class="container-sm">
     Input an ingredient, or a few ingredfients seperated by commas and our pastabot model will return suggested ingredients and pasta shapes for your meal.
+        </div>
     <br>
     <br>
     <form>
