--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -25,7 +25,7 @@
     <br>
     <h2>What does pastafy do?</h2>
     <br>
-        <div class="container-md">
+        <div class="container-lg">
     Have you ever made a pasta sauce, but were uncertain of which pasta shape to use with it? Do you sometimes need suggestions of what ingredients to add to your pasta sauce? These are exactly the kinds of problems that we at Pastafy aim to solve...
         </div>
     <br>
