--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -12,8 +12,8 @@
     
   <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io">
-      <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+    <a class="navbar-item" href="https://www.pastafy.app">
+      <img src="/Rigatoni.png" width="112" height="28">
     </a>
 
     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -41,9 +41,6 @@
         <div class="navbar-dropdown">
           <a class="navbar-item">
             About
-          </a>
-          <a class="navbar-item">
-            Jobs
           </a>
           <a class="navbar-item">
             Contact
