--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -29,8 +29,8 @@
         Home
       </a>
 
-      <a class="navbar-item">
-        Documentation
+      <a class="navbar-item" href="https://github.com/pastafy/pastafyapp">
+        Documentation  
       </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
