--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -13,7 +13,7 @@
   <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="https://www.pastafy.app">
-      <img src="/Rigatoni.png" width="112" height="28">
+      <img src="/Farfalla.png" width="112" height="28">
     </a>
 
     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
