--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -82,10 +82,8 @@
     <img src="Cibo-min.png" width=400>
     <br>
     <strong>
-        The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in early development stages, our project can be found here:
+        The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in early development stages.
     </strong>
-    <br>
-    <a href="https://github.com/pastafy/pastafyapp" target="_blank">https://github.com/pastafy/pastafyapp</a>
     <br>
     <br>
     <h2>What does pastafy do?</h2>
