--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -26,8 +26,8 @@
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
       
-      <a class="navbar-item">
-        Home
+      <a class="navbar-item" href="https://www.pastafy.app">
+        Pastafy
       </a>
 
       <a class="navbar-item" href="https://github.com/pastafy/pastafyapp">
