--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -53,6 +53,19 @@
         </div>
       </div>
     </div>
+      
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <div class="buttons">
+          <a class="button is-primary">
+            <strong>Sign up</strong>
+          </a>
+          <a class="button is-light">
+            Log in
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 </nav>
 <body>
@@ -66,6 +79,7 @@
     <img src="Cibo-min.png" width=250>
     <br>
     <h4> Solving fun pasta problems with machine learning!
+    <br>
     <strong>
         The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in early development stages.
     </strong>
