--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -57,7 +57,7 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-primary">
+          <a class="button is-warning">
             <strong>Sign up</strong>
           </a>
           <a class="button is-light">
