--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -72,7 +72,7 @@
 <div>
    
     
-    <body style="background-color:LEMONCHIFFON;">
+    <body style="background-color:LIGHTYELLOW;">
     <center>
     <br>
     <br>    
