--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -76,7 +76,11 @@
     <center>
     <br>
     <br>    
-    <img src="Cibo-min.png" width=250>
+       
+<figure class="image is-128x128">
+  <img class="is-rounded" src="Cibo-min.png" width=250>
+</figure> 
+
     <br>
     <h4> Solving fun pasta problems with machine learning!
     <br>
