--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -87,7 +87,7 @@
         The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in early development stages.
     </strong>
   </div>
-   
+</div>  
     <br>
     <br>
     <h2>What does pastafy do?</h2>
