--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -72,24 +72,16 @@
 <div>
 <body style="background-color:LIGHTYELLOW;">   
 <center>    
-  <div class="columns">
-  <div class="column">
     <br>
     <br>    
     <img src="Cibo-min.png" width=250>
     <br>
     <h4> Solving fun pasta problems with machine learning!
     <br>
-  </div>
-
-    <strong>
         The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in early development stages.
-    </strong>
-
-</div>  
     <br>
     <br>
-    <h2>What does pastafy do?</h2>
+        <strong>What does pastafy do?</strong>
     <br>
         <div>
     Have you ever made a pasta sauce, but were uncertain of which pasta shape to use with it? Do you sometimes need suggestions of what ingredients to add to your pasta sauce? These are exactly the kinds of problems that we at Pastafy aim to solve...
