--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -78,17 +78,15 @@
     <br>
     <h4> Solving fun pasta problems with machine learning!
     <br>
-        The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in early development stages.
-    <br>
     <br>
         <strong>What does pastafy do?</strong>
     <br>
         <div>
-    Have you ever made a pasta sauce, but were uncertain of which pasta shape to use with it? Do you sometimes need suggestions of what ingredients to add to your pasta sauce? These are exactly the kinds of problems that we at Pastafy aim to solve...
+    Have you ever made a pasta sauce, but were uncertain of which pasta shape to use with it? Do you sometimes need suggestions of what ingredients to add to your pasta sauce? These are exactly the kinds of problems that we at Pastafy aim to solve...The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in early development stages.
         </div>
     <br>
         <div>
-    Input an ingredient, or a few ingredfients seperated by commas and our pastabot model will return suggested ingredients and pasta shapes for your meal.
+    Input some ingredients and our pastabot model will return suggested pasta shapes and additional ingredients for your meal.
         </div>
     <br>
     <br>
