--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -78,12 +78,15 @@
     <br>
     <h4> Solving fun pasta problems with machine learning!
     <br>
-    <br>
-        <strong>What does pastafy do?</strong>
-    <br>
-        <div>
-    Have you ever made a pasta sauce, but were uncertain of which pasta shape to use with it? Do you sometimes need suggestions of what ingredients to add to your pasta sauce? These are exactly the kinds of problems that we at Pastafy aim to solve...The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in early development stages.
-        </div>
+
+  <section class="section">
+    <div class="container">
+      <h1 class="title">What does pastafy do?</h1>
+      <h2 class="subtitle">
+        Have you ever made a pasta sauce, but were uncertain of which pasta shape to use with it? Do you sometimes need suggestions of what ingredients to add to your pasta sauce? These are exactly the kinds of problems that we at Pastafy aim to solve...The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in early development stages.
+      </h2>
+    </div>
+  </section>
     <br>
         <div>
     Input some ingredients and our pastabot model will return suggested pasta shapes and additional ingredients for your meal.
