--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -78,8 +78,11 @@
     <br>
     <h4> Solving fun pasta problems with machine learning!
     <br>
+</body>
 
-  <section class="section">
+<body>
+<body style="background-color:lavander;"> 
+    <section class="section">
     <div class="container">
       <h1 class="title">What does pastafy do?</h1>
       <h2 class="subtitle">
@@ -87,6 +90,10 @@
       </h2>
     </div>
   </section>
+</body>
+    
+    
+<body>    
     <br>
         <div>
     Input some ingredients and our pastabot model will return suggested pasta shapes and additional ingredients for your meal.
