--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -81,7 +81,7 @@
 </body>
 
 <body>
-<body style="background-color:lavander;"> 
+<body style="background-color:white;"> 
     <section class="section">
     <div class="container">
       <h1 class="title">What does pastafy do?</h1>
