--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -73,12 +73,14 @@
 <body style="background-color:LIGHTYELLOW;">   
 <center>    
     <br>
-    <br>
     <section class="section">
     <div class="container">
       <h1 class="title">What does pastafy do?</h1>
+      <br>
       <h2 class="subtitle">
-        Have you ever made a pasta sauce, but were uncertain of which pasta shape to use with it? Do you sometimes need suggestions of what ingredients to add to your pasta sauce? These are exactly the kinds of problems that we at Pastafy aim to solve...The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in early development stages.
+        Have you ever made a pasta sauce, but were uncertain of which pasta shape to use with it? Do you sometimes need suggestions of what ingredients to add to your pasta sauce? 
+        <br>  
+        These are exactly the kinds of problems that we at Pastafy aim to solve...The Pastafy team is hard at work to deliver the finest pasta centric machine learning solutions. We are still in early development stages.
       </h2>
     </div>
   </section> 
