--- a/src/Front/index.html
+++ b/src/Front/index.html
@@ -70,7 +70,7 @@
 </nav>
 <body>
 <div>
-<body style="background-color:LIGHTYELLOW;">   
+<body style="background-color:FLORALWHITE;">   
 <center>    
     <section class="section">
     <div class="container">
