--- a/pastafy/frontend/public/index.html
+++ b/pastafy/frontend/public/index.html
@@ -7,6 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Predict pastas based on ingredients, using Machine learning"
     />
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166074076-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-166074076-1');
+    </script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Pastafy</title>
